# MINERsim

./: .gitignore
FullGeometry/GEANT4_MS/: CMakeLists.txt  MCNP_gamma_pdf.gdat  MINERsim.cc  MINERsim.in  Vis.in  Vis_cutaway.in  cry.mac  gps.mac  vis.mac
FullGeometry/GEANT4_MS/include/: ActionInitialization.hh  BaseHit.hh  BaseHitLinkDef.hh  BaseTrack.hh  BaseTrackLinkDef.hh  EventAction.hh  GeometryConstruction.hh  HistManager.hh  HistManagerLinkDef.hh  ImportanceGeometryConstruction.hh  MINERMaterials.hh  MinerHit.hh  MinerSD.hh  MonitorGeometryConstruction.hh  PVolumeStore.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RootIO.hh  RunAction.hh  TrackingAction.hh
FullGeometry/GEANT4_MS/src/: ActionInitialization.cc  BaseHit.cc  EventAction.cc  GeometryConstruction.cc  GeometryConstruction.cc.bkp  HistManager.cc  ImportanceGeometryConstruction.cc  ImportanceGeometryConstruction.cc.bkp  ImportanceGeometryConstruction.cc.high  ImportanceGeometryConstruction.cc.low  ImportanceGeometryConstruction.cc.med  ImportanceGeometryConstruction.cc.neu  MINERMaterials.cc  MinerHit.cc  MinerSD.cc  MonitorGeometryConstruction.cc  PVolumeStore.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RootIO.cc  RunAction.cc  SteppingAction.cc  TrackExtra.cc  TrackExtra.hh  TrackingAction.cc
GEANT4_SRC/: CMakeLists.txt  GNUmakefile  MINERsim.cc  gammas_Th232_plus_naturalU.gdat
GEANT4_SRC/include/: BaseHit.hh  EventAction.hh  GeometryConstruction.hh  MinerHit.hh  PrimaryGeneratorAction.hh  RootIO.hh  RootIOMessenger.hh  RunAction.hh
GEANT4_SRC/src/: BaseTrack.cc  EventAction.cc  GeometryConstruction.cc  MinerHit.cc  MinerSD.cc  RootIO.cc  RootIOMessenger.cc  TrackingAction.cc
ParticleGun/: MatrixMakerCode.rtf
ParticleGun/Particle_on_Material/: Results_gCong.txt  Results_gGdn.txt  Results_gGen.txt  Results_gPbn.txt  Results_gPolg.txt  Results_gSig.txt  Results_gWatg.txt  Results_nCong.txt  Results_nConn.txt  Results_nGdg.txt  Results_nGdn.txt  Results_nGeg.txt  Results_nGen.txt  Results_nPbg.txt  Results_nPbn.txt  Results_nPolg.txt  Results_nSig.txt  Results_nSin.txt  Results_nWatg.txt  Results_nWatn.txt  ShieldingAnalysis.py
ParticleGun/qMC_MatrixMaker/: CMakeLists.txt
ParticleGun/qMC_MatrixMaker/include/: B2aDetectorConstruction.hh
ParticleGun/qMC_MatrixMaker/src/: B2TrackerSD.cc  B2aDetectorConstruction.cc
qMC_MatrixMaker/include/: B2TrackerSD.hh  B2aDetectorConstruction.hh
qMC_MatrixMaker/src/: B2EventAction.cc  B2aDetectorConstruction.cc
